Batch renderer textures and texture arrays

--- a/Alexzander-Core/Alexzander-Core.vcxproj
+++ b/Alexzander-Core/Alexzander-Core.vcxproj
@@ -22,9 +22,9 @@
     <ClInclude Include="src\Alex.h" />
     <ClInclude Include="src\al\app\Application.h" />
     <ClInclude Include="src\al\Common.h" />
-    <ClInclude Include="src\al\graphics\Texture.h" />
     <ClInclude Include="src\al\graphics\layer\Group.h" />
     <ClInclude Include="src\al\graphics\layer\Layer2D.h" />
+    <ClInclude Include="src\al\graphics\renderables\Texture.h" />
     <ClInclude Include="src\al\utils\ImageUtils.h" />
     <ClInclude Include="src\glm\common.hpp" />
     <ClInclude Include="src\glm\detail\compute_vector_relational.hpp" />
@@ -172,15 +172,15 @@
     <ClInclude Include="src\glm\vector_relational.hpp" />
     <ClInclude Include="src\gl\gl.h" />
     <ClInclude Include="src\al\graphics\renderer\BasicRenderer2D.h" />
-    <ClInclude Include="src\al\graphics\BasicSprite.h" />
+    <ClInclude Include="src\al\graphics\renderables\BasicSprite.h" />
     <ClInclude Include="src\al\graphics\renderer\BatchRenderer2D.h" />
     <ClInclude Include="src\al\graphics\buffers\Buffer.h" />
     <ClInclude Include="src\al\graphics\buffers\IndexBuffer.h" />
     <ClInclude Include="src\al\graphics\buffers\VertexArray.h" />
-    <ClInclude Include="src\al\graphics\Renderable2D.h" />
+    <ClInclude Include="src\al\graphics\renderables\Renderable2D.h" />
     <ClInclude Include="src\al\graphics\renderer\Renderer2D.h" />
     <ClInclude Include="src\al\graphics\Shader.h" />
-    <ClInclude Include="src\al\graphics\Sprite.h" />
+    <ClInclude Include="src\al\graphics\renderables\Sprite.h" />
     <ClInclude Include="src\al\utils\FileUtils.h" />
     <ClInclude Include="src\al\utils\Timer.h" />
     <ClInclude Include="src\al\graphics\Window.h" />
@@ -192,15 +192,15 @@
   <ItemGroup>
     <ClCompile Include="src\al\graphics\layer\Group.cpp" />
     <ClCompile Include="src\al\graphics\layer\Layer2D.cpp" />
+    <ClCompile Include="src\al\graphics\renderables\Texture.cpp" />
     <ClCompile Include="src\al\graphics\renderer\BasicRenderer2D.cpp" />
-    <ClCompile Include="src\al\graphics\BasicSprite.cpp" />
+    <ClCompile Include="src\al\graphics\renderables\BasicSprite.cpp" />
     <ClCompile Include="src\al\graphics\renderer\BatchRenderer2D.cpp" />
     <ClCompile Include="src\al\graphics\buffers\Buffer.cpp" />
     <ClCompile Include="src\al\graphics\buffers\IndexBuffer.cpp" />
     <ClCompile Include="src\al\graphics\buffers\VertexArray.cpp" />
     <ClCompile Include="src\al\graphics\Shader.cpp" />
-    <ClCompile Include="src\al\graphics\Sprite.cpp" />
-    <ClCompile Include="src\al\graphics\Texture.cpp" />
+    <ClCompile Include="src\al\graphics\renderables\Sprite.cpp" />
     <ClCompile Include="src\al\graphics\Window.cpp" />
     <ClCompile Include="src\al\utils\ImageUtils.cpp" />
     <ClCompile Include="src\glm\detail\dummy.cpp" />
