--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -142,8 +142,9 @@
     <ClInclude Include="src\graphics\TileLayer.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\textures\sample.png" />
-    <Image Include="src\textures\test.png" />
+    <Image Include="src\textures\test1.png" />
+    <Image Include="src\textures\test2.png" />
+    <Image Include="src\textures\test3.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
