--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -136,7 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="src\shaders\basic.frag" />
-    <None Include="src\shaders\basic.shader" />
+    <None Include="src\shaders\basic.glsl" />
     <None Include="src\shaders\basic.vert" />
   </ItemGroup>
   <ItemGroup>
@@ -148,7 +148,6 @@
     <Image Include="src\textures\test3.png" />
   </ItemGroup>
   <ItemGroup>
-    <Font Include="arial.ttf" />
     <Font Include="Jellee-Roman.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
