--- a/Alexzander-Core/Alexzander-Core.vcxproj.filters
+++ b/Alexzander-Core/Alexzander-Core.vcxproj.filters
@@ -588,11 +588,14 @@
     <ClInclude Include="src\al\graphics\Shader.h">
       <Filter>Header Files\graphics\renderer</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\al\graphics\renderer\Texture.h">
       <Filter>Header Files\graphics\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\al\audio\AudioEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\al\audio\Sound.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -996,6 +999,12 @@
     </ClCompile>
     <ClCompile Include="src\al\graphics\renderer\Texture.cpp">
       <Filter>Source Files\graphics\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\al\audio\AudioEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\al\audio\Sound.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
