--- a/Sandbox/Sandbox.vcxproj.filters
+++ b/Sandbox/Sandbox.vcxproj.filters
@@ -38,6 +38,9 @@
     <None Include="src\shaders\basic.vert">
       <Filter>Shader</Filter>
     </None>
+    <None Include="src\sound\AMemoryAway.ogg" />
+    <None Include="src\sound\Deeper.ogg" />
+    <None Include="src\sound\FromHere.ogg" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\graphics\TileLayer.h">
@@ -54,10 +57,5 @@
     <Image Include="src\textures\test3.png">
       <Filter>Resource Files</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <Font Include="Jellee-Roman.ttf">
-      <Filter>Fonts</Filter>
-    </Font>
   </ItemGroup>
 </Project>
