--- a/Sandbox/Sandbox.vcxproj.filters
+++ b/Sandbox/Sandbox.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\graphics\TileLayer.cpp">
+    <ClCompile Include="src\Test2D.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -43,7 +43,7 @@
     <None Include="src\sound\FromHere.ogg" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\graphics\TileLayer.h">
+    <ClInclude Include="src\Test2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -57,5 +57,8 @@
     <Image Include="src\textures\test3.png">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="src\fonts\Jellee-Roman.ttf" />
   </ItemGroup>
 </Project>
