--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -110,6 +110,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -123,6 +124,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -131,7 +133,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\graphics\TileLayer.cpp" />
+    <ClCompile Include="src\Test2D.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -143,12 +145,15 @@
     <None Include="src\sound\FromHere.ogg" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\graphics\TileLayer.h" />
+    <ClInclude Include="src\Test2D.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\textures\test1.png" />
     <Image Include="src\textures\test2.png" />
     <Image Include="src\textures\test3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="src\fonts\Jellee-Roman.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
